[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/archer_skeleton/archer_skeleton(7).tres" type="Texture" id=1]
[ext_resource path="res://assets/archer_skeleton/archer_skeleton(3).tres" type="Texture" id=2]
[ext_resource path="res://assets/archer_skeleton/archer_skeleton(2).tres" type="Texture" id=3]
[ext_resource path="res://assets/archer_skeleton/archer_skeleton(5).tres" type="Texture" id=4]
[ext_resource path="res://assets/archer_skeleton/archer_skeleton(1).tres" type="Texture" id=5]
[ext_resource path="res://assets/archer_skeleton/archer_skeleton(4).tres" type="Texture" id=6]
[ext_resource path="res://assets/archer_skeleton/archer_skeleton(6).tres" type="Texture" id=7]
[ext_resource path="res://scenes/Skeleton_archer.gd" type="Script" id=8]
[ext_resource path="res://assets/archer_skeleton/[ONTIVA.COM]-Arrow sound effect-HQ.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "waiting",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.125
height = 9.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 224, 39 )

[node name="Skeleton_archer" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.125, 3.375 )
shape = SubResource( 2 )

[node name="CanAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanAttack"]
position = Vector2( 195, 2 )
shape = SubResource( 3 )

[node name="attackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -17.505
[connection signal="body_entered" from="CanAttack" to="." method="_on_CanAttack_body_entered"]
[connection signal="body_exited" from="CanAttack" to="." method="_on_CanAttack_body_exited"]
